Add Python dependencies for word cloud generation

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -50,6 +50,17 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Python dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Generate Word Cloud
         run: python3 generate_wordcloud.py
 
